@@ -61,7 +61,7 @@ MsgSerialNotValid=Die Serial-Nr. ist nicht g\u00fcltig
 MsgUlAlreadyUsed=Die LHM-Nr. wird bereits verwendet
 MsgUlMandatory=Bitte geben Sie die LHM-Nr. ein
 MsgUlNotAccessable=Bitte geben Sie ein g\u00fcltiges LHM an
-MsgUlNotFound=Das LHM konnte nciht gefunden werden
+MsgUlNotFound=Das LHM konnte nicht gefunden werden
 MsgUlTypeNotValid=Das LHM ist nicht g\u00fcltig
 TitleChooseOrder=WE: Auswahl
 TitleChoosePos=WE: Position
