@@ -146,7 +146,7 @@ GoodsReceipt.orderAlreadyStarted           = Der Auftrag ist bereits gestartet
 GoodsReceipt.orderNotCreated               = Das Anlegen des Auftrags ist noch nicht abgeschlossen
 GoodsReceipt.orderNotYetProcessable        = Der Auftrag ist noch nicht bearbeitbar
 GoodsReceipt.stockIsChanged                = Der Bestand wurde inzwischen ver\u00E4ndert
-GoodsReceipt.stockNotAvailable             = Der Bestand ist nicht mehr verfgbar
+GoodsReceipt.stockNotAvailable             = Der Bestand ist nicht mehr verf\u00FCgbar
 
 GoodsReceipt.unitLoadAlreadyExists         = Das LHM existiert bereits
 
@@ -161,7 +161,7 @@ Inventory.missingUnitLoadType      = Der LHM-Typ muss angegeben werden
 Inventory.onlyPositiveAmount       = Die Menge mu\u00DF gr\u00F6\u00DFer als 0 sein
 Inventory.stockHasReservation      = Der Bestand hat eine Reservierung
 Inventory.tooMuchAmount            = Es kann nicht mehr Menge verwendet werden als verf\u00FCgbar ist
-Inventory.transferNotAllowed       = Die Operation is nicht m\u00F6glich
+Inventory.transferNotAllowed       = Die Operation ist nicht m\u00F6glich
 Inventory.wrongItemOnFixAssignment = Falscher Artikel auf Festplatz
 
 LocationFinder.invalidLocationIsLocked = Der Lagerplatz ist gesperrt
